--- a/mariadb-10-6/docker-compose.yml
+++ b/mariadb-10-6/docker-compose.yml
@@ -3,15 +3,12 @@ volumes:
 
 services:
   db:
-    container_name: db
+    container_name: mariadb
     image: mariadb:10.6
     command: --default-authentication-plugin=mysql_native_password
     volumes:
       # ...volume for the database
       - mysqldata:/var/lib/mysql
-
-      # ...path to custom MySQL configuration files
-      - ./conf.d:/etc/mysql/conf.d
 
       # ...folder containing initial database dumps to populate the initial database
       - ./dumps:/docker-entrypoint-initdb.d
