--- a/oracle-free-23/docker-compose.yml
+++ b/oracle-free-23/docker-compose.yml
@@ -3,7 +3,7 @@ volumes:
 
 services:
   db:
-    container_name: db
+    container_name: oracle
     image: container-registry.oracle.com/database/free:23.3.0.0
     volumes:
       # ...volume for the database and required database configuration files
