--- a/mariadb-10-6/docker-compose.yml
+++ b/mariadb-10-6/docker-compose.yml
@@ -10,18 +10,14 @@ services:
       # ...volume for the database
       - mysqldata:/var/lib/mysql
 
-      # ...folder containing initial database dumps to populate the initial database
-      - ./dumps:/docker-entrypoint-initdb.d
-
       # ...directory containing db import- and export scripts
       - ./scripts/dump:/opt/mysql/scripts/dump
 
       # ...a place to put data into the running container if needed
       - ./shared:/shared
     environment:
-      - MYSQL_ROOT_PASSWORD=your-root-pw
-      - MYSQL_USER=your-mysql-user
-      - MYSQL_PASSWORD=your-mysql-user-pw
-      - MYSQL_DATABASE=your-initial-db
+      - MYSQL_ROOT_PASSWORD=1234
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=1234
     ports:
       - 3306:3306
