--- a/oracle-free-23/docker-compose.yml
+++ b/oracle-free-23/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - oradata:/opt/oracle/oradata
 
       # ...directory containing db import- and export scripts
-      - ./scripts/dump:/opt/oracle/scripts/dump
+      - ./scripts:/opt/oracle/scripts
 
       #...a place to put data into the running container if needed
       - ./shared:/shared
