Implement executing sql scripts within oracle free 23

--- a/oracle-free-23/justfile
+++ b/oracle-free-23/justfile
@@ -24,3 +24,7 @@ db-import:
 # Export dump
 db-export:
 	docker exec -it oracle /opt/oracle/scripts/db-export.sh
+	
+# Execute sql script
+db-execute:
+	docker exec -it oracle /opt/oracle/scripts/db-execute.sh
